--- a/src/main/resources/static/web/css/game.css
+++ b/src/main/resources/static/web/css/game.css
@@ -3,9 +3,9 @@
 }
 
 .ship-piece-hited{
-    background-color: darkmagenta;
+    background-color: tomato;
 }
 
 .salvo{
-    background-color: crimson;
+    background-color: lightcoral;
 }
